; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msacm32/extr_internal.c_MSACM_GetRegistryKey.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msacm32/extr_internal.c_MSACM_GetRegistryKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@MSACM_GetRegistryKey.baseKey = internal constant [56 x i8] c"Software\\Microsoft\\AudioCompressionManager\\DriverCache\\\00", align 16
@.str = private unnamed_addr constant [36 x i8] c"No alias needed for registry entry\0A\00", align 1
@MSACM_hHeap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @MSACM_GetRegistryKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @MSACM_GetRegistryKey(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = call i32 @ERR(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %46

12:                                               ; preds = %1
  %13 = call i32 @lstrlenW(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @MSACM_GetRegistryKey.baseKey, i64 0, i64 0))
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* @MSACM_hHeap, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @lstrlenW(i8* %18)
  %20 = add nsw i32 %15, %19
  %21 = add nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = mul i64 %22, 1
  %24 = trunc i64 %23 to i32
  %25 = call i32* @HeapAlloc(i32 %14, i32 0, i32 %24)
  store i32* %25, i32** %4, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %29, label %28

28:                                               ; preds = %12
  store i32* null, i32** %2, align 8
  br label %46

29:                                               ; preds = %12
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @lstrcpyW(i32* %30, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @MSACM_GetRegistryKey.baseKey, i64 0, i64 0))
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* %5, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = call i32 @lstrcpyW(i32* %35, i8* %38)
  %40 = load i32*, i32** %4, align 8
  %41 = load i32, i32* %5, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %40, i64 %42
  %44 = call i32 @CharLowerW(i32* %43)
  %45 = load i32*, i32** %4, align 8
  store i32* %45, i32** %2, align 8
  br label %46

46:                                               ; preds = %29, %28, %10
  %47 = load i32*, i32** %2, align 8
  ret i32* %47
}

declare dso_local i32 @ERR(i8*) #1

declare dso_local i32 @lstrlenW(i8*) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @lstrcpyW(i32*, i8*) #1

declare dso_local i32 @CharLowerW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
